--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "esbuild": "^0.24.0",
+    "@aws-sdk/client-sns": "^3.699.0",
+    "@aws-sdk/client-sqs": "^3.699.0",
     "typescript": "^5.7.2"
+  },
+  "devDependencies": {
+    "esbuild": "^0.24.0",
+    "aws-lambda": "^1.0.7"
   }
 }
