--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
   "dependencies": {
     "@aws-sdk/client-sns": "^3.699.0",
     "@aws-sdk/client-sqs": "^3.699.0",
+    "@types/node": "^22.10.1",
     "typescript": "^5.7.2"
   },
   "devDependencies": {
-    "esbuild": "^0.24.0",
-    "aws-lambda": "^1.0.7"
+    "aws-lambda": "^1.0.7",
+    "esbuild": "^0.24.0"
   }
 }
