--- a/package.json
+++ b/package.json
@@ -8,12 +8,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.705.0",
     "@aws-sdk/client-sns": "^3.699.0",
     "@aws-sdk/client-sqs": "^3.699.0",
+    "@aws-sdk/util-dynamodb": "^3.705.0",
     "@types/node": "^22.10.1",
-    "typescript": "^5.7.2"
+    "typescript": "^5.7.2",
+    "uuid": "^11.0.3"
   },
   "devDependencies": {
+    "@types/aws-lambda": "^8.10.146",
     "aws-lambda": "^1.0.7",
     "esbuild": "^0.24.0"
   }
